Add paragraph text.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
   </head>
   <body>
-    <h1>Hello, I'm Alex</h1>
+    <h1>Hello, I'm Alex!</h1>
+    <p>This is a fantastic website.</p>
   </body>
 </html>
